# thaicovid

./: .gitignore  README.md
api/: pyproject.toml  runner.py
api/thaicovid_api/: __init__.py
api/thaicovid_api/adapters/: gsheet.py
api/thaicovid_api/controllers/: __init__.py  cases.py  poi.py
api/thaicovid_api/models/: __init__.py  day_cases.py  poi.py
api/thaicovid_api/repositories/: __init__.py  cases.py
api/thaicovid_api/services/: cases.py
api/thaicovid_api/settings/: __init__.py
api/thaicovid_api/shared/: logger.py
web/: Dockerfile  package.json  tsconfig.json
web/components/: Layout.tsx  LineChart.tsx  Map.tsx
web/containers/: Chart.tsx  Dashboard.jsx  RiskArea.tsx
web/css/: paper-dashboard.css
web/pages/: _app.js  _document.js  index.tsx
web/scripts/: docker-build.sh  docker-push-gundam.sh
