[tool.poetry]
name = "thaicovid-api"
version = "0.1.0"
description = ""
authors = ["Praphan Klairith <xbird007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
