[tool.poetry]
name = "thaicovid-api"
version = "0.1.0"
description = ""
authors = ["Praphan Klairith <xbird007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
loguru = "^0.4.1"
gspread = "^3.3.0"
oauth2client = "^4.1.3"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
